[package]
name = "minivec"
version = "0.2.2"
authors = ["LeonineKing1199 <christian.mazakas@gmail.com>"]
edition = "2018"
license = "BSL-1.0"
description = "A version of Vec that's only the size of a single pointer"
repository = "https://github.com/LeonineKing1199/minivec"
categories = ["data-structures"]
keywords = ["vec", "vector"]

# Enable with feature `serde`
[dependencies.serde]
version = "1"
default-features = false
optional = true
