[package]
authors = ["Christian Mazakas <christian.mazakas@gmail.com>"]
categories = ["data-structures"]
description = "A version of Vec that's only the size of a single pointer"
edition = "2018"
keywords = ["vec", "vector"]
license = "BSL-1.0"
name = "minivec"
repository = "https://github.com/cmazakas/minivec"
version = "0.5.0"

# Enable with feature `serde`
[dependencies.serde]
default-features = false
optional = true
version = "1"

[features]
minivec_nightly = []

[dev-dependencies]
rand = "0.7"

[profile.bench]
debug = true
